--- a/07-child-theme.html
+++ b/07-child-theme.html
@@ -9,7 +9,7 @@
         <p>Il est possible de modifier directement un thème WordPress en éditant les fichiers du thème.</p>
         <p>Cependant, si vous effectuez une mise à jour du thème <strong>l'ensemble des modifications seront écrasées</strong> !</p>
         <footer>
-            <a href="#" class="danger">Ne jamais modifier directement les fichier d'un thème !</a>
+            <a href="#" class="danger">Ne jamais modifier directement les fichiers d'un thème !</a>
         </footer>
     </section>
 
