Add page template slides

--- a/03-installation.html
+++ b/03-installation.html
@@ -5,20 +5,51 @@
     </section>
 
     <section>
-        <h3>wordpress.com</h3>
-        <p>Wordpress.com permet de créer rapidement un site ou un blog. L’hébergement est inclus et certaines fonctionnalités supplémentaires sont disponibles.</p>
-        <p>Il n’est cependant pas possible d’installer d’extension ou de modifier les thèmes disponibles (une option payante permet cependant d’activer l’éditeur CSS).</p>
+        <h3>wordpress.org VS wordpress.com</h3>
+        <div class="container">
+            <div class="col">
+                <img src="assets/images/wordpress.png" class="wp-logo" alt="wordpress.com">
+                <h4>wordpress.com</h4>
+                <ul>
+                    <li>Simple et rapide</li>
+                    <li>Hébergement</li>
+                    <li>Fonctionnalités limitées</li>
+                    <li>Nom de domaine payant</li>
+                </ul>
+            </div>
+            <div class="col">
+                <img src="assets/images/wordpress-2.png" class="wp-logo" alt="wordpress.org">
+                <h4>wordpress.org</h4>
+                <ul>
+                    <li>Installation manuelle</li>
+                    <li>Choix de l'hébergeur</li>
+                    <li>Choix du nom de domaine</li>
+                    <li>Pas de limite dans l'installation de thèmes / extensions</li>
+                    <li>Code open source</li>
+                </ul>
+            </div>
+        </div>
     </section>
 
     <section>
-        <h3>Installation de Wordpress</h3>
+        <h3>Installation de WordPress</h3>
         <ol>
             <li>Télécharger le fichier zip contenant les fichiers de Wordpress.</li>
-            <li>Créer une nouvelle base de données pour stocker les données du site.</li>
-            <li>Dézipper le fichier de Wordpress dans le répertoire du serveur web.</li>
+            <li>Dézipper le fichier de Wordpress dans le répertoire du serveur web (www ou htdocs).</li>
             <li>Aller dans le dossier depuis un navigateur web.</li>
-            <li>Suivre les instructions d’installation.</li>
+            <li>Suivre les instructions d’installation et créer une base de données dans PhpMyAdmin.</li>
         </ol>
+    </section>
+
+    <section>
+        <h3>Installation de WordPress</h3>
+        <p>Sur cette, page vous devez saisir les <strong>informations de connexion</strong> à votre base de données. Il faut donc préalablement avoir <strong>créé une base de données</strong> (via PhpMyAdmin par exemple).</p>
+        <img src="assets/images/wp-installation-step-1.png" alt="Etape 1">
+    </section>
+
+    <section>
+        <h3>Installation de WordPress</h3>
+        <p>Pour créer une base de données, connectez-vous à PhpMyAdmin (<a href="http://localhost/phpmyadmin" class="link-phpmyadmin" target="_blank">http://localhost/phpmyadmin</a>)</p>
     </section>
 
     <section>
