--- a/08-theme.html
+++ b/08-theme.html
@@ -26,7 +26,7 @@
 
     <section>
         <h3>Créer un thème - Le fichier style.css</h3>
-        <p>Le fichier <code>style.css</code> doit obligatoirement commencé par une zone de commentaire permettant de décrire les infos du thèmes :</p>
+        <p>Le fichier <code>style.css</code> doit obligatoirement commencer par une zone de commentaire permettant de décrire les infos du thèmes :</p>
         <pre><code class="language-css">/*
 Theme Name: Twenty Thirteen
 Theme URI: http://wordpress.org/themes/twentythirteen
