--- a/08-theme.html
+++ b/08-theme.html
@@ -42,6 +42,7 @@ Text Domain: twentythirteen
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 */</code></pre>
+        <p>Les valeurs "Theme Name", "Author", "Description", "Version", "License", "License URI" et "Text Domain" sont obligatoires.</p>
     </section>
 
     <section>
