Upgrade NPM packages and fix ChartJS

--- a/02-cms.html
+++ b/02-cms.html
@@ -57,7 +57,7 @@
     <section>
         <h3>Utilisation sur le web</h3>
         <p>Répartition sur l'ensemble des sites internet mondiaux.</p>
-        <canvas id="chart-cms"></canvas>
+        <canvas id="chart-cms" style="max-height: 50vh"></canvas>
         <footer>
             <a href="https://www.blogdumoderateur.com/parts-de-marche-cms/" class="info" target="_blank">Source (BDM)</a>
         </footer>
