--- a/04-extensions.html
+++ b/04-extensions.html
@@ -177,7 +177,7 @@
         <ul>
             <li><a href="https://wordpress.org/plugins/woocommerce" target="_blank">WooCommerce</a></li>
         </ul>
-        <canvas id="chart-ecommerce"></canvas>
+        <canvas id="chart-ecommerce" style="max-height: 50vh"></canvas>
     </section>
 
 </section>
